--- a/A_Visiter.html
+++ b/A_Visiter.html
@@ -232,7 +232,7 @@
                 </a>
             </div>
             <div id="wb_element_instance37" class="wb_element" style=" line-height: normal;">
-                <p class="wb-stl-footer"><strong>BEN BOUBAKER</strong> Wissam - <strong>RAHMOUNI </strong>Youness -<strong> GEZGIN</strong> Numan - <strong>BOUDJEMA</strong> Riwane</p>
+                <p class="wb-stl-footer"><strong>BEN BOUBAKER</strong> Wissam - <strong>RAHMOUNI </strong>Younes -<strong> GEZGIN</strong> Numan - <strong>BOUDJEMA</strong> Riwane</p>
 
                 <p class="wb-stl-footer" style="text-align: center;">© 2015 <a href="http://idf.16mb.com">idf.16mb.com</a>
                 </p>
