--- a/Accueil.html
+++ b/Accueil.html
@@ -190,7 +190,7 @@
             </div>
 
             <div id="ecritureFooter" class="wb_element" style=" line-height: normal;">
-                <p class="wb-stl-footer"><strong>BEN BOUBAKER</strong> Wissam - <strong>RAHMOUNI </strong>Youness -<strong> GEZGIN</strong> Numan - <strong>BOUDJEMA</strong> Riwane</p>
+                <p class="wb-stl-footer"><strong>BEN BOUBAKER</strong> Wissam - <strong>RAHMOUNI </strong>Younes -<strong> GEZGIN</strong> Numan - <strong>BOUDJEMA</strong> Riwane</p>
 
                 <p class="wb-stl-footer" style="text-align: center;">© 2015</p>
             </div>
