carte avec lien

--- a/Carte.html
+++ b/Carte.html
@@ -40,13 +40,20 @@
 		    {
 		        if(code == 75)
                     window.location = "http://www.paris.fr";
-                var message = 'Région : "'
-		            + region 
-		            + '" || Id : "'
-		            + code
-					+ '"';
-             
-		        alert(message);
+                if(code == 93)
+                    window.location = "http://www.seine-saint-denis.fr/";
+                if(code == 92)
+                    window.location = "http://www.hauts-de-seine.fr/";
+                if(code == 94)
+                    window.location = "http://www.valdemarne.fr/";
+                if(code == 91)
+                    window.location = "http://www.essonne.fr/";
+                if(code == 95)
+                    window.location = "http://www.valdoise.fr/";
+                if(code == 77)
+                    window.location = "http://www.seine-et-marne.fr/";
+                if(code == 78)
+                    window.location = "https://www.yvelines.fr/";
 		    }
 		});
 	});
