--- a/A_Visiter.html
+++ b/A_Visiter.html
@@ -19,7 +19,7 @@
 
     <link href="css/site.css?v=1.0.14" rel="stylesheet" type="text/css" />
     <link href="css/common.css?ts=1449768608" rel="stylesheet" type="text/css" />
-    <link href="css/A_Visiter.less?ts=1445243437" rel="stylesheet/less" type="text/css" />
+    <link href="css/A_Visiter.css?ts=1445243437" rel="stylesheet/css" type="text/css" />
 	
 	<script src="js/less.js-2.5.3/dist/less.js" type="text/javascript"></script>
 
