--- a/Accueil.html
+++ b/Accueil.html
@@ -18,7 +18,7 @@
 
     <link href="css/site.css?v=1.0.14" rel="stylesheet" type="text/css" />
     <link href="css/common.css?ts=1449768608" rel="stylesheet" type="text/css" />
-    <link href="css/accueil.less?ts=1449768608" rel="stylesheet/less" type="text/css" />
+    <link href="css/accueil.css?ts=1449768608" rel="stylesheet" type="text/css" />
 	<script src="js/less.js-2.5.3/dist/less.js" type="text/javascript"></script>
     <script type="text/javascript">
         var currLang = '';
