--- a/Evenements.html
+++ b/Evenements.html
@@ -21,7 +21,7 @@
     <link href="css/site.css?v=1.0.14" rel="stylesheet" type="text/css">
     <link href="css/common.css?ts=1449768610" rel="stylesheet" type="text/css">
     <!-- mise en place less -->
-    <link href="css/Evenements.less" rel="stylesheet/less" type="text/css">
+    <link href="css/Evenements.css" rel="stylesheet" type="text/css">
     <script src="js/less.js-2.5.3/dist/less.js" type="text/javascript"></script>
     <script type="text/javascript">
         var currLang = '';
